c4 - create comercio component

--- a/src/App.css
+++ b/src/App.css
@@ -312,6 +312,12 @@ nav {
   font-weight: 600;
 }
 
+.info-boxes-img-container {
+  width: 250px;
+  height: 250px;
+  display: flex;
+}
+
 .nav-logo-container {
   max-width: 210px;
 }
