--- a/src/App.css
+++ b/src/App.css
@@ -71,6 +71,39 @@ nav {
   display: flex;
   padding-top: 3rem;
 }
+
+.turismo-buttons-container {
+  margin-top: 2rem;
+  display: flex;
+}
+
+.turismo-section-container {
+  margin-top: 15rem;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.turismo-section-image-container {
+  display: flex;
+  max-width:1024px;
+  margin-left: 5rem;
+}
+
+.turismo-background-image-container {
+  position: absolute;
+  right: -130px;
+  z-index: -2;
+
+}
+
+.turismo-section-text-container {
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+}
+
 .home-bannerImage-container {
   position: absolute;
   top: -100px;
@@ -268,6 +301,9 @@ nav {
 .work-section-wrapper {
   margin-top: 15rem;
 }
+
+
+
 .work-section-top p {
   text-align: center;
   max-width: 600px !important;
@@ -359,7 +395,8 @@ nav {
     max-width: 450px;
   }
   .home-banner-container,
-  .about-section-container {
+  .about-section-container,
+  .turismo-section-container {
     flex-direction: column-reverse;
     align-items: center;
     justify-content: center;
@@ -367,10 +404,13 @@ nav {
   .about-section-container {
     flex-direction: column;
   }
+
   .home-image-section,
-  .about-section-image-container {
+  .about-section-image-container,
+  .turismo-section-image-container {
     width: 100%;
     max-width: 400px;
+    max-height: 600px;
   }
   .primary-heading {
     text-align: center;
@@ -381,7 +421,8 @@ nav {
     max-width: 80%;
   }
   .home-text-section,
-  .about-section-text-container {
+  .about-section-text-container,
+  .turismo-section-text-container {
     justify-content: center;
     align-items: center;
     margin-top: 4rem;
@@ -394,10 +435,12 @@ nav {
   .about-section-container {
     margin-top: 5rem !important;
   }
-  .about-buttons-container {
+  .about-buttons-container,
+  .turismo-buttons-container {
     justify-content: center;
     flex-direction: column;
   }
+
   .primary-subheading {
     text-align: center;
   }
@@ -411,6 +454,9 @@ nav {
   }
   .about-section-image-container {
     margin-right: 0rem !important;
+  }
+  .turismo-section-image-container {
+    margin-left: 0rem !important;
   }
   .work-section-wrapper {
     margin-top: 5rem !important;
@@ -448,7 +494,8 @@ nav {
 }
 @media (max-width: 600px) {
   .home-bannerImage-container,
-  .about-background-image-container {
+  .about-background-image-container,
+  .turismo-background-image-container {
     display: none;
   }
 }
