--- a/src/App.css
+++ b/src/App.css
@@ -87,7 +87,6 @@ nav {
 
 .turismo-section-image-container {
   display: flex;
-  max-width:1024px;
   margin-left: 5rem;
 }
 
@@ -157,7 +156,7 @@ nav {
   background-color: #e48f0f;
 }
 .about-section-container {
-  margin-top: 20rem;
+  margin-top: 15rem;
   position: relative;
   display: flex;
   align-items: center;
@@ -302,8 +301,6 @@ nav {
   margin-top: 15rem;
 }
 
-
-
 .work-section-top p {
   text-align: center;
   max-width: 600px !important;
@@ -318,40 +315,40 @@ nav {
   flex-direction: column;
 }
 .work-section-info {
-  width: 290px;
-  min-height: 350px;
-  background-color: white;
-  padding: 1rem 2rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  border-radius: 1rem;
+  max-width: 100%;
+  padding: 18px;
+
   color: #505050;
-  margin: 1rem 2rem;
+  margin: 0 auto;
 }
-.work-section-info h2 {
+.work-section-info h2 {  
   margin: 1rem 0rem;
 }
 .work-section-bottom {
+  text-align: center;  
   margin-top: 5rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
 }
+
+.comercio-buttons-container {
+  text-align: center;
+  justify-content: center;
+  display:flex;
+  margin-top: 50px;
+}
+
 .work-section-info p {
-  flex: 1;
-  display: flex;
-  align-items: center;
+  justify-content: center;
   font-weight: 600;
 }
 
 .info-boxes-img-container {
-  width: 250px;
+  margin: 0 auto;
+}
+
+.info-boxes-img-container img {
   height: 250px;
-  display: flex;
+  width: 250px;
+  margin: 0 auto;
 }
 
 .nav-logo-container {
