--- a/src/App.css
+++ b/src/App.css
@@ -80,11 +80,15 @@ nav {
 
 .turismo-section-container,
 .aprenda-section-container {
-  margin-top: 15rem;
+  margin-top: 20rem;
   position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.aprenda-section-container {
+margin-top: 25rem;
 }
 
 .turismo-section-image-container,
