--- a/src/App.css
+++ b/src/App.css
@@ -126,6 +126,7 @@ margin-top: 25rem;
   z-index: -2;
   max-width: 700px;
 }
+
 .home-image-section {
   max-width: 600px;
   flex: 1;
@@ -268,18 +269,39 @@ margin-top: 25rem;
   padding: 0.5rem 1rem;
 }
 
-.footer-section-container {  
-  background-color: #fe9e0d;
+.footer-content {
+  background-color: #111;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   text-align: center;
-  justify-content: center;  
-  margin-top: 10rem;
+  margin-top: 120px;
 }
 
-.footer-text {    
-  color: #313131;
-  font-weight: 400;
-  font-size: 24px;
+.footer-content p{
+  max-width: 480px;
+  margin: 10px auto;
+  line-height: 28px;
+  font-size: 14px;
+  color: #fff;
 }
+
+.footer-content img {
+  width: 90px;
+  margin-top:25px;
+}
+
+.footer-bottom {
+  background-color: #000;
+  padding: 20px 0;
+  text-align: center;
+}
+
+.footer-bottom p {
+  color: #fff;
+}
+
 
 
 .comercio-section-container,
