--- a/src/Pages/style.css
+++ b/src/Pages/style.css
@@ -7,22 +7,43 @@
     margin: 0 auto;
 }
 
-.about-heading {
+.about-heading,
+.turismo-heading {
     margin: 0 auto;
     text-align: center;
     margin-bottom: 30px;
 }
 
-.about-text {
+.about-text,
+.turismo-text {
     width: 90vh;
     text-align: justify;
     margin: 0 auto;
     font-size: 18px;
 }
 
-.about-img {
+.turismo-text p{
+    margin-top: 15px;
+}
+
+.turismo-text h3{
+    margin-top: 30px;
+}
+
+.turismo-focus {
+    background: orange;
+}
+
+.about-img,
+.turismo-img {
     display: flex;
     justify-content: center;
+}
+
+.turismo-img {
+    margin: 20px;
+    flex-direction: column;
+    text-align: center;
 }
 
 #sobre3 {
@@ -34,6 +55,10 @@
 
 @media (max-width:800px) {
     .about-text{
+        width: 100%;
+    }
+
+    .turismo-text {
         width: 100%;
     }
 }
