--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,7 @@ nav {
 }
 .navbar-menu-container {
   display: none;
+
 }
 
 .navbar-links-container a {
@@ -72,6 +73,7 @@ nav {
   font-size: 1.5rem;
   cursor: pointer;
 }
+
 .home-banner-container {
   position: relative;
   display: flex;
@@ -462,6 +464,7 @@ margin-top: 25rem;
   .navbar-links-container {
     display: none;
   }
+
   .navbar-menu-container {
     display: flex;
   }
@@ -583,6 +586,11 @@ margin-top: 25rem;
   .aprenda-background-image-container {
     display: none;
   }
+
+  .links{
+    text-decoration: none;
+    color: #000;
+  }
 }
 @media (max-width: 600px) {
   .home-bannerImage-container,
@@ -592,4 +600,6 @@ margin-top: 25rem;
   .aprenda-background-image-container {
     display: none;
   }
+
+  
 }
